Fixed: Blockquotes not being aligned properly in the site

--- a/site-sass/site-specific/site.post.scss
+++ b/site-sass/site-specific/site.post.scss
@@ -38,9 +38,8 @@
 blockquote {
 background: #f9f9f9;
 border-left: 3px solid #ccc;
-margin: 20px 10px;
+margin: 0 auto;
 padding: 15px;
-display: inline-flex;
 justify-content: center;
 align-items: center;
 box-sizing: border-box;
